# tree-sitter-factor

./: CMakeLists.txt  Cargo.toml  Justfile  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  parser.exp  parser.lib  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-factor.h  tree-sitter-factor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_factor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFactorTests/: TreeSitterFactorTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: arraylike.txt  definitions.txt  effect.txt  fry_quotations.txt  numbers.txt  parse_time.txt  quotes.txt  strings.txt  syntax.txt  unary_postfix.txt
