[package]
name = "tree-sitter-factor"
description = "A tree-sitter grammar for the Factor (https://factorcode.org/) programming language."
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "factor"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/erochest/tree-sitter-factor"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
